...
    <string name="reset_password_description">Please enter your username or email below and you will be sent an email with a link to reset your password.</string>

    <string name="remember_username_description">Please enter your email below and you will be sent an email with a reminder of your username.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
...
    <string name="error_login">Invalid username/password\nPlease try again</string>
    <string name="error_media_app_not_found">You don\'t appear to have a media player installed which supports playing this video.</string>
    <string name="error_no_username">Please enter your username</string>
    <string name="error_processing_response">Error processing response</string>
    <string name="error_quiz_no_questions">There aren\'t any questions in this quiz.</string>
    <string name="error_register_no_email">Please enter your email address</string>
    <string name="error_register_password">Your password must be at least %1$d or more characters</string>
    <string name="error_register_password_no_match">Your passwords don\'t match</string>
    <string name="error_register_no_firstname">Please enter your first name</string>
    <string name="error_register_no_lastname">Please enter your last name</string>
    <string name="error_register_no_phoneno">Please enter your phone number</string>
    <string name="error_register_no_username">Please enter a username</string>
    <string name="error_register_username_spaces">Your username cannot contain spaces</string>
    <string name="error_register_email">Email not valid</string>
    <string name="error_resource_app_not_found">You don\'t seem to have an app installed to open \'%1$s\'. Please install an app capable of opening this type of file.</string>
    <string name="external_resource_app_missing">You don\'t seem to have an app installed that can open \'%1$s\'</string>
    <string name="external_resource_install_app">Install app</string>


    <string name="error_resource_not_found">File: \'%1$s\' not found.</string>
    <string name="error_preloading_accounts">Error preloading accounts from CSV file</string>
    <string name="error_reset_password">Username or email not found\nPlease try again</string>
    <string name="error_remember_username">Email not found\nPlease try again</string>
    <string name="no_title_set">No title set</string>

    <string name="error_insufficient_storage_available">Insufficient storage available</string>
    <string name="error_sdcard">Your SD card is not available - please restart this app when the SD card is available.\nThe app will now close.</string>
    <string name="error_media_not_found">Media file: \'%1$s\' not found.</string>
...
    <string name="transfer_receiving_course">Receiving course file…</string>
    <string name="sign_in_title">Sign in</string>
    <string name="register_account_already">Already have an account?</string>
    <string name="login_dont_have_account">Don\'t have an account yet?</string>
    <string name="offline_register_confirm">Alternatively, you can register offline and start using the app. Then, you\'ll need to submit or transfer your user data later</string>
    <string name="register_offline">Register offline</string>
    <string name="field_required">This field cannot be empty</string>
    <string name="field_spaces_error">Cannot contain spaces</string>
    <string name="permissions.location.title">Access location</string>
    <string name="permissions.location.description">In new Android devices, this permission is needed to be able to pair with other devices using Bluetooth</string>
    <string name="points">points</string>
    <string name="last_year">last year</string>
    <string name="last_month">last month</string>
    <string name="last_week">last week</string>
...
