...
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="CHSS"
        app:backgroundTint="@color/bg_button_selectable" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reg_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Other"
        app:backgroundTint="@color/bg_button_selectable" />

...
