...
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/notification_large_icon_height"
            android:padding="5dp"
            android:text="@string/reset_username_title"/>

        <EditText
            android:id="@+id/reset_username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="5dp"/>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_reset"/>

    </LinearLayout>

...
