...
                android:layout_marginTop="@dimen/padding_medium"
                android:layout_marginEnd="@dimen/padding_large"
                android:text="@string/title_login"
                android:theme="@style/PrimaryButton" />

            <Button
                android:id="@+id/btn_reset_password"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                android:text="@string/title_btn_reset_password" />
...
